# samloader-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  release-windows.yml
fus/: Cargo.toml
fus/src/: archive.rs  auth.rs  download.rs  error.rs  fusclient.rs  http.rs  lib.rs  xml.rs
heimdall/: Cargo.toml  build.rs
heimdall/source/: ActionInterfaces.h  FlashAction.cpp
heimdall/src/: bridge_manager.rs  detect.rs  download_pit.rs  error.rs  flash.rs  main.rs  odin_manager.rs  packets.rs  print_pit.rs  tar_flash.rs
libpit/: Cargo.toml
libpit/src/: lib.rs
odin/: Cargo.toml
odin/src/: error.rs  firmware.rs  lib.rs  odin.rs  odin_manager.rs  packets.rs  usb.rs
odin/src/usb/: mock.rs  mod.rs  nusb.rs  rusb.rs  serial.rs
pit/: Cargo.toml
pit/src/: lib.rs
samloader/: Cargo.toml
samloader-gui/: index.html  package-lock.json  package.json
samloader-gui/public/licenses/: DEPENDENCY_LICENSES.md  OFL-1.1.txt  THIRD_PARTY_NOTICES.md
samloader-gui/scripts/: generate-licenses.mjs
samloader-gui/src/: App.test.ts  App.tsx  main.tsx  styles.css
samloader-gui/src-tauri/: Cargo.toml  tauri.conf.json
samloader-gui/src-tauri/capabilities/: default.json
samloader-gui/src-tauri/src/: main.rs
samloader-odin/: Cargo.toml
samloader-odin/src/: error.rs  packets.rs
samloader/src/: actions.rs  detect.rs  download.rs  flash.rs  fsutil.rs  main.rs
test-data/: history.xml
