[package]
name = "heimdall"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
samloader-pit = { workspace = true }
samloader-odin = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tar = { workspace = true }

[[bin]]
name = "heimdall"
path = "src/main.rs"
