[package]
name = "samloader-odin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
samloader-pit = { workspace = true }
rusb = { workspace = true }
binrw = { workspace = true }
tar = { workspace = true }
md5 = { workspace = true }
thiserror = { workspace = true }
