[package]
name = "samloader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Download and flash firmware for Samsung devices"
keywords = ["samsung", "firmware"]

[dependencies]
samloader-fus = { workspace = true }
samloader-pit = { workspace = true }
samloader-odin = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
memmap2 = { workspace = true }
tar = { workspace = true }
libc = { workspace = true }
cfg-if = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
samloader-odin = { workspace = true, features = ["mock"] }
zip = { version = "7.2.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }
fast-md5 = "1.0"

[features]
default = ["nusb", "serialport"]
rusb = ["samloader-odin/rusb"]
nusb = ["samloader-odin/nusb"]
serialport = ["samloader-odin/serialport"]
mock = ["samloader-odin/mock"]
