[package]
name = "samloader-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
samloader-fus = { path = "../../fus" }
samloader-odin = { path = "../../odin", default-features = false, features = ["nusb", "serialport"] }
samloader-pit = { path = "../../pit" }
memmap2 = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = { workspace = true }
tauri = { version = "2.11.1", features = [] }
tauri-plugin-dialog = "2.4.1"
