[package]
name = "samloader-gui"
version = "2.0.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
samloader-fus = { path = "../../fus" }
samloader-odin = { path = "../../odin", default-features = false, features = ["nusb", "serialport"] }
samloader-pit = { path = "../../pit" }
memmap2 = { workspace = true }
dirs = "6"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = { workspace = true }
tauri = { version = "2.11.1", features = [] }
tauri-plugin-dialog = "2.4.1"
tauri-plugin-log = "2.8.0"
tauri-plugin-single-instance = "2.4.2"
log = { workspace = true }

[dev-dependencies]
zip = { version = "7.2.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }
fast-md5 = "1.0"
